--- a/producthunt/accounts/templates/accounts/signup.html
+++ b/producthunt/accounts/templates/accounts/signup.html
@@ -15,11 +15,11 @@
 
     <div class="form-group">
         <label>Password</label>
-        <input type="password" class="form-control" name="password1">
+        <input type="password" class="form-control" name="password1" placeholder="Enter Password">
     </div>
     <div class="form-group">
         <label>Confirm Password</label>
-        <input type="password" class="form-control" name="password2">
+        <input type="password" class="form-control" name="password2" placeholder="Confirm Password">
     </div>
 
         {% if error %}
