--- a/producthunt/accounts/templates/accounts/signup.html
+++ b/producthunt/accounts/templates/accounts/signup.html
@@ -8,16 +8,16 @@
 
 <form method="post" action="{% url 'signup' %}">
     {%csrf_token %}
-    <div class="form-group">
+    <div class="form-group row" >
         <label>Username</label>
-        <input type="text" class="form-control" name="username">
+        <input type="text" class="form-control" name="username" col-sm-2>
     </div>
 
-    <div class="form-group">
+    <div class="form-group row">
         <label>Password</label>
         <input type="password" class="form-control" name="password1" placeholder="Enter Password">
     </div>
-    <div class="form-group">
+    <div class="form-group row">
         <label>Confirm Password</label>
         <input type="password" class="form-control" name="password2" placeholder="Confirm Password">
     </div>
