--- a/producthunt/products/templates/products/detail.html
+++ b/producthunt/products/templates/products/detail.html
@@ -9,7 +9,7 @@
         <img src="{{ product.icon.url}}" class="img-fluid">
     </div>
     <div class="col-10">
-        <a href="{{product.url }}"><h1>{{product.title}}</h1></a>
+        <a href="{% url 'detail' product.id %}"><h1>{{product.title}}</h1></a>
     </div>
 </div>
 
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row pt-2">
     <div class="col-4">
         <h4>Hunted by {{ product.hunter.username }}</h4>
     </div>
