--- a/producthunt/products/templates/products/home.html
+++ b/producthunt/products/templates/products/home.html
@@ -3,7 +3,28 @@
 
 {% block content %}
 
-Woooow!
+{% for product in products.all %}
+
+<div class="row pt-3">
+    <div class="col-2" onclick="window.location = '{% url 'detail' product.id %}';" style="cursor : pointer;">
+        <img src="{{ product.icon.url}}" class="img-fluid"/>
+    </div>
+    <div class="col-6" onclick="window.location = '{% url 'detail' product.id %}';" style="cursor : pointer;">
+        <a href="{{url  }}"><h1>{{product.title}}</h1></a>
+        <p>{{ product.summary }}</p>
+    </div>
+    <div class="col-4">
+        <a href="javascript:{document.getElementById('upvote{{ product.id }}').submit()}"><button type="button" class="btn btn-primary">Upvote {{product.votes_total}}</button></a>
+    </div>
+
+</div>
+
+<form id="upvote{{ product.id }}" method="POST" action="{% url 'upvote' product.id %}">
+    {% csrf_token %}
+    <input type="hidden">
+</form>
+
+{% endfor %}
 
 {% endblock %}
 
